tests/error/linear_errors/tuple_drop.err
Error: Drop violation (at $FILE:7:11)
  | 
5 | @compile_guppy
6 | def foo() -> qubit:
7 |     return (1, qubit(), array(1, 2))[1]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^ Non-droppable items inside expression of type `(int, qubit,
  |                                      array[int, 2])` are leaked

Help: Consider assigning this value to a local variable before subscripting it

Guppy compilation failed due to 1 previous error
